src/app/globals.css
@import "tailwindcss";

@theme {
  --color-blue-30: #84B9EF;
  --color-blue-20: #9CC1E7;
  --color-blue-10: #E2ECF5;
  --color-blue-0: #EDEFF0;
  --color-beige-40: #EDDFD0;
  --color-beige-30: #F4E6DA;
  --color-beige-20: #F1EBE5;
  --color-beige-10: #F4F1EE;
  --color-beige-0: #FFFFFF;
  --color-neutral-30: #1A1615;
  --color-neutral-20: #453F3D;
  --color-neutral-10: #757170;
  --color-stroke: #E4E2E2;
  --color-dark-brown: #614A44;
  --color-accent-brown: #754D29;
  --color-accent-blue: #156CC2;
  --color-accent-yellow: #CF8D13;
  --color-accent-green: #0EA158;
  --color-accent-orange: #C9502E;
}

html,
body {
  max-width: 100vw;
  overflow-x: clip;
}



@utility bg-white {
  background-color: #F9F8F8;
}

@utility text-h2 {
  @apply text-[52px]/[120%] font-semibold tracking-[-0.03em] text-neutral-30;
}

@utility text-h3 {
  @apply text-[40px]/[120%] font-semibold tracking-[-0.03em] text-neutral-30;
}

@utility text-h4 {
  @apply text-[32px]/[120%] font-semibold tracking-[-0.03em] text-neutral-30;
}

@utility text-h5 {
  @apply text-[28px]/[140%] font-semibold tracking-[-0.03em] text-neutral-30;
}

@utility text-h5 {
  @apply text-[20px]/[140%] font-semibold tracking-[-0.03em] text-neutral-30;
}

@utility text-body-xl {
  @apply text-[20px]/[150%] font-normal text-neutral-20;
}

@utility text-body-large {
  @apply text-[18px]/[150%] font-normal text-neutral-20;
}

@utility text-body-normal {
  @apply text-[16px]/[150%] font-normal text-neutral-20;
}

@utility text-body-small {
  @apply text-[14px]/[150%] font-normal text-neutral-20;
}

@utility text-body-xs {
  @apply text-[13px]/[120%] font-normal text-neutral-30;
}

@utility text-label {
  @apply text-[18px]/[1.2em] font-semibold text-beige-0;
}

@utility text-eyebrow-large {
  @apply text-[18px]/[125%] font-semibold text-dark-brown;
}

@utility text-eyebrow-small {
  @apply text-[15px]/[125%] font-semibold text-dark-brown;
}

@utility text-testemonial {
  @apply text-[64px]/[145%] font-medium text-neutral-30;
}

@utility text-body-normal {
  @apply text-[16px]/[150%] font-medium text-neutral-20;
}

@utility content {
  @apply bg-linear-to-t box-border from-blue-20 via-beige-20 to-beige-0 flex flex-col items-center lg:pb-40 md:pb-24 pb-20 lg:px-0 md:px-10 px-4 lg:gap-40 md:gap-24 gap-20;
}

@keyframes marquee {
  0% {
    transform: translateX(0);
  }

  100% {
    transform: translateX(-50%);
  }
}

@utility animate-marquee {
  animation: marquee 40s linear infinite;
}

@layer components {
  .hero {
    @apply relative lg:h-255 h-200 lg:min-h-[80vh] min-h-[70vh] flex justify-center overflow-hidden bg-linear-to-t from-beige-40 to-blue-20;

    .hero-content {
      @apply z-2 px-5 max-w-268 pt-40 flex flex-col items-center gap-16;

      .top {
        @apply max-w-198 flex flex-col items-center gap-10;

        .texts {
          @apply flex flex-col items-center gap-4 text-center;

          .hero-title {
            @apply lg:text-[76px]/[120%] text-[40px]/[120%] text-neutral-30 font-bold;
          }

          .hero-description {
            @apply lg:text-body-xl text-body-normal max-w-175;
          }
        }

        .buttons {
          @apply flex gap-2;
        }
      }

      .hero-image {
        @apply lg:h-175 md:h-125 h-119 max-w-268;
        transform: perspective(1000px);
      }
    }

    .hero-left-cloud {
      @apply absolute lg:w-fit h-fit w-65 top-50 lg:-left-105 -left-60;
    }

    .hero-right-cloud {
      @apply absolute lg:w-fit h-fit w-65 top-50 lg:-right-105 -right-60;
    }
  }

  .logos-ticker {
    @apply flex w-full justify-center py-20;

    .logos-ticker-content {
      @apply w-full max-w-[1400px] flex flex-col items-center gap-12;

      p {
        @apply text-center text-4xl font-black text-neutral-30 tracking-tight;
      }

      .ticker {
        @apply overflow-x-hidden h-36 w-full max-w-full;
        mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
        -webkit-mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
      }

      .ticker>div {
        @apply animate-marquee h-full w-max flex items-center gap-24 pr-24;
      }
    }
  }

  .reviews {
    @apply flex w-full justify-center;

    .container {
      @apply flex flex-col items-center gap-14 w-full max-w-5xl;

      .big-review {
        @apply text-center flex flex-col items-center gap-5 lg:w-225;

        .big-testimonial {
          @apply md:text-6xl/[145%] text-4xl/[145%] font-medium text-neutral-30;
        }

        .user-info {
          @apply flex flex-col items-center gap-4 w-full min-w-100;
        }
      }

      .review-row {
        @apply w-full overflow-x-hidden;
        mask-image: linear-gradient(to right, transparent, black, transparent);
        -webkit-mask-image: linear-gradient(to right, transparent, black, transparent);
      }
    }
  }

  .review-card {
    @apply bg-white/70 p-8 flex flex-col gap-8 rounded-3xl h-fit w-95;

    .user-info {
      @apply flex gap-4 items-center;
    }
  }
}

